--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
     white-space: nowrap;
   }
 </style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <body>
 
@@ -819,40 +820,31 @@ function openWindow(id, originEl) {
   });
 }
 
-function dissolveWindow(rect, titlebarH) {
-  // Cover the window area with a grid of small tiles.
-  // Each tile gets a random "death time" — when progress passes it,
-  // that tile drops out. Result: window appears to dissolve pixel by pixel.
+function dissolveWindow(snapshotCanvas, rect) {
+  // Read every pixel from the snapshot and build a tile array with real colors.
+  const TILE     = 3;      // px — small enough to look like real pixel breakup
+  const DURATION = 1700;   // ms
 
-  const TILE      = 4;     // px per dissolve pixel — small and grainy
-  const DURATION  = 2200;  // ms total
-  const cols = Math.ceil(rect.width  / TILE);
-  const rows = Math.ceil(rect.height / TILE);
+  const sCtx = snapshotCanvas.getContext('2d');
+  const cols  = Math.ceil(rect.width  / TILE);
+  const rows  = Math.ceil(rect.height / TILE);
 
-  // Assign each tile a random dropout time (0..1) with slight spatial noise
-  // so adjacent tiles don't all die together — pure random looks most digital
   const tiles = [];
   for (let r = 0; r < rows; r++) {
     for (let c = 0; c < cols; c++) {
-      const sx = rect.left + c * TILE;
-      const sy = rect.top  + r * TILE;
-
-      // Color: approximate what the window actually looks like in this region
-      // Title bar = near-black, content area = light gray/white
-      const inTitlebar = (sy - rect.top) < titlebarH;
-      const v = inTitlebar
-        ? Math.floor(Math.random() * 40)          // dark  0-40
-        : 180 + Math.floor(Math.random() * 75);   // light 180-255
-      const color = `rgb(${v},${v},${v})`;
+      // Sample the center pixel of this tile from the snapshot
+      const px = Math.min(Math.floor(c * TILE + TILE / 2), snapshotCanvas.width  - 1);
+      const py = Math.min(Math.floor(r * TILE + TILE / 2), snapshotCanvas.height - 1);
+      const d  = sCtx.getImageData(px, py, 1, 1).data;
+      const color = `rgb(${d[0]},${d[1]},${d[2]})`;
 
       tiles.push({
-        sx, sy,
+        sx: rect.left + c * TILE,
+        sy: rect.top  + r * TILE,
         color,
-        // Each tile dies at a uniformly random time across the full duration
-        // Small gaussian-ish nudge: average of 3 randoms = slightly clustered
-        // around midpoint but with full spread — feels organic not mechanical
-        deathT: (Math.random() + Math.random() + Math.random()) / 3,
-        alpha: 1,
+        // Pure random death time — every pixel on its own schedule
+        deathT: Math.random(),
+        alpha:  1,
       });
     }
   }
@@ -862,26 +854,19 @@ function dissolveWindow(rect, titlebarH) {
   function drawFrame(now) {
     const elapsed  = now - start;
     const progress = Math.min(elapsed / DURATION, 1);
-
-    // Ease: slow start, accelerates — pixels start dropping slowly
-    // then it all falls apart quickly at the end
-    const ease = Math.pow(progress, 0.75);
+    // pow < 1 = slow start (pixels trickle), accelerates toward end
+    const ease = Math.pow(progress, 0.7);
 
     zoomCtx.clearRect(0, 0, zoomCanvas.width, zoomCanvas.height);
 
     let anyAlive = false;
     tiles.forEach(tile => {
-      // How far past this tile's death time are we?
       if (ease >= tile.deathT) {
-        // Tile is dying — fade it out over a short window after its death time
-        const fadeRange = 0.08;
-        const fadeProgress = (ease - tile.deathT) / fadeRange;
+        const fadeProgress = (ease - tile.deathT) / 0.09;
         tile.alpha = Math.max(0, 1 - fadeProgress);
       }
-
       if (tile.alpha <= 0) return;
       anyAlive = true;
-
       zoomCtx.globalAlpha = tile.alpha;
       zoomCtx.fillStyle   = tile.color;
       zoomCtx.fillRect(tile.sx, tile.sy, TILE, TILE);
@@ -903,19 +888,34 @@ function closeWindow(id) {
   const win = document.getElementById('window-' + id);
   if (!win) return;
 
-  const rect      = win.getBoundingClientRect();
-  const titlebarH = win.querySelector('.mac-titlebar')?.offsetHeight || 20;
+  const rect = win.getBoundingClientRect();
 
-  // Hide the real window immediately — canvas dissolve takes over
-  win.classList.remove('active', 'closing');
-  win.style.display    = 'none';
-  win.style.left       = '';
-  win.style.top        = '';
-  win.style.transform  = '';
-  win.style.zIndex     = '';
+  // Snapshot the real window pixels with html2canvas, THEN hide it
+  html2canvas(win, {
+    x:              rect.left,
+    y:              rect.top,
+    width:          rect.width,
+    height:         rect.height,
+    useCORS:        true,
+    allowTaint:     true,
+    backgroundColor: null,
+    scale:          1,
+  }).then(snapshot => {
+    // Now hide the real window
+    win.classList.remove('active', 'closing');
+    win.style.display   = 'none';
+    win.style.left      = '';
+    win.style.top       = '';
+    win.style.transform = '';
+    win.style.zIndex    = '';
 
-  // Run the pixel dissolve on the zoom canvas
-  dissolveWindow(rect, titlebarH);
+    // Dissolve the snapshot
+    dissolveWindow(snapshot, rect);
+  }).catch(() => {
+    // Fallback if html2canvas fails — just hide
+    win.classList.remove('active', 'closing');
+    win.style.display = 'none';
+  });
 
   const anyOpen = document.querySelectorAll('.mac-window.active').length > 0;
   if (!anyOpen) overlay.classList.remove('active');
