--- a/index.html
+++ b/index.html
@@ -987,7 +987,21 @@ document.querySelectorAll('.mac-window').forEach(makeDraggable);
   }
 */
 const PROJECTS = [
-  // Add new projects here — they'll be auto-rendered on page load
+  {
+    "id": "item-t1crw",
+    "label": "minidisc-player",
+    "left": "22.5%",
+    "top": "49.7%",
+    "width": "7.7%",
+    "imageSrc": "minidisc-player.png",
+    "title": "Air Chrysalis",
+    "description": "With a strong sense of aesthetics and DIY hacking bravado, Air Chrysalis is both a dream pop duo and culture-jamming visual art project equally imprinted by analog and digital. Sharing an appreciation for retrofuturism and hauntology, as the reference to the mysterious sarcophagus in Haruki Murakami’s 1Q84 suggests, Stanley Chase III (vocals, keys) and Michael Powell (guitar, synth) began channeling their unified vision into a pastiche of misremembered nocturnal pop in the summer of 2019.\n\nDefining their sound through driving, gritty, enveloping low-end synth lines and aerodynamic, hypnogogic guitar buoyed over parallax vocals, Air Chrysalis occupies a stylized space between new wave, shoegaze, trip hop, and incandescent, adventurous, experimental pop music. The duo debuted in April 2020 with the neon-noir cinematic single “Beyond My God.” The song saw success on non-commercial radio, coupled with a video that stitched together vintage CRT monitor visuals and advanced projection mapping. Air Chrysalis released their seven-song eponymous EP in September, recorded and mixed by Anne Gauthier (My Morning Jacket, Dean & Britta), with a trippy rotoscopic animated video for the luminous opener “Helical Scan” following at the end of the year.\n\nAir Chrysalis will release their debut full-length in summer 2021, featuring contributions from White Reaper‘s Nick Wilkerson, SEE TAI, and others. An elaborate live show is ready to deploy once, you know, concerts are a thing again.\n\nFor publicity purposes, let’s say RIYL Black Moth Super Rainbow, Beach House, M83, Oneohtrix Point Never \n\n“Air Chrysalis has crafted a synth-heavy masterpiece this year, recalling Slowdive or Mogwai, as filtered through a pop-friendly sieve of vaporwave and Kraftwerk.” – LEO Weekly, Best Locals Songs of 2020\n\n“These dudes are penetrating my molecular structure” – Clay Lapari, Exxpired Music and respected LA insider (!)\n\n “Is this band the new Joy Division? Was parked and couldn’t leave the car til it finished.” – Some commenters on YouTube\n\nAs heard in regular rotation on WFPK 91.9 and WXOX 97.1! Cool!",
+    "images": [
+      "acpic.jpg"
+    ],
+    "link": "https://airchrysalissound.com/",
+    "linkText": "View Project"
+  }
 ];
 
 function buildProjectFromConfig(project) {
